--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "dev": "nodemon backend/app.js",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
@@ -22,7 +21,6 @@
     "expo-status-bar": "~1.2.0",
     "express": "^4.17.3",
     "googleapis": "^99.0.0",
-    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.4.1",
     "nodemailer": "^6.7.3",
     "react": "17.0.1",
@@ -33,8 +31,7 @@
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-vector-icons": "^9.1.0",
-    "react-native-web": "0.17.1",
-    "react-native-maps": "0.29.4"
+    "react-native-web": "0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
