--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "bcryptjs": "^2.4.3",
@@ -19,22 +20,25 @@
     "expo-font": "~10.0.4",
     "expo-linear-gradient": "~11.0.3",
     "expo-linking": "~3.0.0",
+    "expo-location": "~14.0.1",
     "expo-status-bar": "~1.2.0",
     "express": "^4.17.3",
     "googleapis": "^99.0.0",
     "jsonwebtoken": "^8.5.1",
+    "luxon": "^2.3.2",
     "mongodb": "^4.4.1",
     "nodemailer": "^6.7.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-asset": "^2.0.1",
-    "react-native-reanimated": "~2.3.1",
+    "react-native-maps": "0.29.4",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.1",
-    "react-native-maps": "0.29.4"
+    "socket.io": "^4.5.0",
+    "socket.io-client": "^4.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
