--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.0",
     "expo": "~44.0.0",
+    "expo-camera": "~12.1.2",
     "expo-font": "~10.0.4",
+    "expo-image-picker": "~12.0.1",
     "expo-linear-gradient": "~11.0.3",
     "expo-linking": "~3.0.0",
     "expo-location": "~14.0.1",
@@ -27,12 +29,14 @@
     "jsonwebtoken": "^8.5.1",
     "luxon": "^2.3.2",
     "mongodb": "^4.4.1",
+    "multer": "^1.4.4",
     "nodemailer": "^6.7.3",
     "react": "17.0.1",
-    "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-asset": "^2.0.1",
+    "react-native-image-slider-box": "^1.1.23",
     "react-native-maps": "0.29.4",
+    "react-native-reanimated-carousel": "^2.3.10",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-vector-icons": "^9.1.0",
